# proteosim

./: LICENSE  README.md  ms_experiment_final.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: dummy_proteins.fasta  sample_proteins.fasta
proteosim/: __init__.py  file_handling.py  liquid_chromatography.py  mass_spctra_simulation.py  protein_digestion.py
proteosim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: ms1_peptide_mzs.tsv  ms2_MATSR_fragment_mzs.tsv
tests/: test_file_handling.py  test_liquid_chromatography.py  test_mass_spctra_simulation.py  test_protein_digestion.py
